# ub-g21-irtm

./: README.md
emotion-analysis/: .gitignore  README.md  config.yaml  pyproject.toml
emotion-analysis/emotion_analysis/: __init__.py
emotion-analysis/emotion_analysis/data/: dataset.py  loader.py  transform.py  types.py
emotion-analysis/emotion_analysis/model/: emotion_cause_text.py  finetune.py  metrics.py  model.py  modules.py  pretrained.py  trainer.py
emotion-analysis/emotion_analysis/settings/: config.py
emotion-analysis/emotion_analysis/utils/: weight.py
emotion-analysis/notebooks/: data.ipynb  eda.ipynb  main.ipynb
information-retrieval/: .gitignore  README.md  pom.xml
information-retrieval/.debug/: output.txt
information-retrieval/core/: pom.xml
information-retrieval/core/src/main/java/unibuc/fmi/: App.java  Useful.java
information-retrieval/core/src/main/java/unibuc/fmi/analyze/: RoTextAnalyzer.java
information-retrieval/core/src/main/java/unibuc/fmi/analyzer/: AnalyzerFlags.java  AnalyzerMode.java  AnalyzerOptions.java  AnalyzerResources.java  RoTextAnalyzer.java
information-retrieval/core/src/main/java/unibuc/fmi/attributes/: TokenFlagsAttribute.java
information-retrieval/core/src/main/java/unibuc/fmi/common/: Constants.java  Utils.java
information-retrieval/core/src/main/java/unibuc/fmi/document/: DocumentFields.java
information-retrieval/core/src/main/java/unibuc/fmi/filters/: ConditionalTokenFlagsFilter.java  PatternTokenFlagsFilter.java
information-retrieval/core/src/test/java/unibuc/fmi/: AppTest.java
information-retrieval/index/: pom.xml
information-retrieval/index/src/main/java/unibuc/fmi/: App.java  ErrorCode.java  IndexCommand.java
information-retrieval/index/src/main/java/unibuc/fmi/command/: IndexCommand.java
information-retrieval/index/src/main/java/unibuc/fmi/common/: DebugUtils.java  DocumentType.java  DocumentTypes.java
information-retrieval/index/src/main/java/unibuc/fmi/document/: DocumentContent.java  DocumentType.java
information-retrieval/index/src/main/java/unibuc/fmi/file/: ExtensionPathFilter.java  Filter.java  PathFilter.java  PathSearch.java  PathSuffixFilter.java  TikaDocTypeFilter.java
information-retrieval/index/src/main/java/unibuc/fmi/filters/: DocumentTypeFilter.java  Filter.java  PathSuffixFilter.java
information-retrieval/index/src/main/java/unibuc/fmi/index/: DocumentIndexer.java
information-retrieval/index/src/main/java/unibuc/fmi/indexer/: DocumentIndexer.java
information-retrieval/index/src/main/java/unibuc/fmi/parse/: TikaContent.java  TikaParser.java
information-retrieval/index/src/main/java/unibuc/fmi/parser/: TikaParser.java
information-retrieval/index/src/test/java/unibuc/fmi/: AppTest.java
information-retrieval/query/: pom.xml
information-retrieval/query/src/main/java/unibuc/fmi/: App.java  ErrorCode.java  QueryCommand.java
information-retrieval/resources/: stopwords_no_accents.txt  synonyms_multi.txt  synonyms_singl.txt
(+16 files in other folders)
